module12/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          imagePullPolicy: IfNotPresent
          image: xueli17/httpserver:v1.0-metrics
          ports:
          - containerPort: 8080
